--- a/templates/add.html
+++ b/templates/add.html
@@ -36,7 +36,7 @@
         <br>
         <div>
             <input type="checkbox" id="show" name="show" value="show">
-            <label for="show"> Show?</label><br>
+            <label for="show"> Show?</label>
         </div>
         <br>
         <div>
