--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
         <a href="/picture">Change Picture</a>
     </div>
     <div>
-        <a href="/mailing">Update Newsletter</a>
+        <a href="/mailing">Mailing option</a>
     </div>
     <div>
         <a href="/delete">Delete Account</a>
