--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,16 @@
 
 {% block main %}
     {% for plant in plants %}
-        <img src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" height="500">
+    <div>
+        <div>
+            <img src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" width="25%">
+        </div>
+        <div>Name: {{ plant[1] }}</div>
+        <div>Stock: {{ plant[2] }}</div>
+        <div>Price: {{ plant[3] }},00€</div>
+        <div>Description: {{ plant[5] }}</div>
+        <input type="number" id="{{ plant[0] }}" name="quantity" value="1" min="1" max="{{ plant[2] }}">
+        <button name="add" type="submit">Add</button>
+    </div>
     {% endfor %}
 {% endblock %}
