--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,19 @@
 
 {% block main %}
     {% for plant in plants %}
-    <div>
+    <form action="/" method="post">
         <div>
-            <img src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" width="25%">
+            <div>
+                <img name="{{ plant[4] }}" src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" width="25%">
+            </div>
+            <div name="{{ plant[1] }}">Name: {{ plant[1] }}</div>
+            <div name="{{ plant[2] }}">Stock: {{ plant[2] }}</div>
+            <div name="{{ plant[3] }}">Price: {{ plant[3] }},00€</div>
+            <div name="{{ plant[5] }}">Description: {{ plant[5] }}</div>
+            <input type='hidden' name='plant_id' value='{{ plant[0]}}'>
+            <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}">
+            <button name="submit" value="submit" type="submit">Add</button>
         </div>
-        <div>Name: {{ plant[1] }}</div>
-        <div>Stock: {{ plant[2] }}</div>
-        <div>Price: {{ plant[3] }},00€</div>
-        <div>Description: {{ plant[5] }}</div>
-        <input type="number" id="{{ plant[0] }}" name="quantity" value="1" min="1" max="{{ plant[2] }}">
-        <button name="add" type="submit">Add</button>
-    </div>
+    </form>
     {% endfor %}
 {% endblock %}
