--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 
         <!-- Required meta tags -->
         
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="author" content="Benoit Hage - hage.benoit@gmail.com, Rachel De La Torre - rachel.delatorre1@gmail.com" />
         <meta name="description" content="The Crazy Plant Crew website" />
