--- a/templates/username.html
+++ b/templates/username.html
@@ -6,7 +6,7 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Administration</a></li>
+        <li><a href="/administration">Manage</a></li>
     {% endif %}
 {% endblock %}
 
