--- a/templates/basket.html
+++ b/templates/basket.html
@@ -6,9 +6,9 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Administration</a></li>
-        <li><a href="/communication">Add News</a></li>
-        <li><a href="/newsletter">Newsletter</a></li>
+        <li><a href="/administration">Manage</a></li>
+        <li><a href="/communication">Inform</a></li>
+        <li><a href="/newsletter">Compose</a></li>
     {% endif %}
 {% endblock %}
 
@@ -17,7 +17,7 @@
         <table>
             <thead>
                 <tr>
-                    <th scope="col">Thumbnail</th>
+                    <th scope="col">Picture</th>
                     <th scope="col">Name</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Price</th>
@@ -32,7 +32,7 @@
                         <td>{{ basket[4] }}</td>
                         <td>{{ basket[3] }}</td>
                         <td>{{ basket[6] }}</td>
-                        <td>{{ basket[7] }}</td>
+                        <td>{{ basket[7] }},00€</td>
                         <td><button name="delete" value="{{ basket[0] }}" type="submit">Delete</button></td>
                     </tr>
                 {% endfor %}
