--- a/templates/communication.html
+++ b/templates/communication.html
@@ -6,16 +6,29 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Administration</a></li>
-        <li><a href="/communication">Add News</a></li>
-        <li><a href="/newsletter">Newsletter</a></li>
+        <li><a href="/administration">Manage</a></li>
+        <li><a href="/communication">Inform</a></li>
+        <li><a href="/newsletter">Compose</a></li>
     {% endif %}
 {% endblock %}
 
 {% block main %}
     Communication page
-    <br>
-    <div>
-        <a href="/">Back</a>
-    </div>
+    <form action="/communication" method="post">
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for communication in communications %}
+                    <tr>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </form>
 {% endblock %}
