--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -6,9 +6,9 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Administration</a></li>
-        <li><a href="/communication">Add News</a></li>
-        <li><a href="/newsletter">Newsletter</a></li>
+        <li><a href="/administration">Manage</a></li>
+        <li><a href="/communication">Inform</a></li>
+        <li><a href="/newsletter">Send</a></li>
     {% endif %}
 {% endblock %}
 
