--- a/templates/create.html
+++ b/templates/create.html
@@ -18,7 +18,7 @@
             <input id="title" autocomplete="off" autofocus class="form-control" name="title" placeholder=" Title" type="text" size="50">
         </div>
         <br>
-        <div></div>
+        <div>
             {{ ckeditor.create() }}
             {{ ckeditor.load(pkg_type="standard") }}
         </div>
