--- a/templates/forget.html
+++ b/templates/forget.html
@@ -3,6 +3,14 @@
 {% block title %}
     Forgot password
 {% endblock %}
+
+{% block navigation %}
+    {% if role == "admin" %}
+        <li class="NavBarLi"><a href="/administration">Manage</a></li>
+        <li class="NavBarLi"><a href="/communication">Inform</a></li>
+        <li class="NavBarLi"><a href="/newsletter">Compose</a></li>
+    {% endif %}
+{% endblock %}
     
 {% block main %}
     <form action="/forget" method="post">
