--- a/templates/index.html
+++ b/templates/index.html
@@ -6,26 +6,28 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Manage</a></li>
-        <li><a href="/communication">Inform</a></li>
-        <li><a href="/newsletter">Compose</a></li>
+        <li class="NavBarLi"><a href="/administration">Manage</a></li>
+        <li class="NavBarLi"><a href="/communication">Inform</a></li>
+        <li class="NavBarLi"><a href="/newsletter">Compose</a></li>
     {% endif %}
 {% endblock %}
 
 {% block main %}
     {% for plant in plants %}
     <form action="/" method="post">
-        <div>
-            <div>
-                <img name="{{ plant[4] }}" src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" width="25%">
+        <div class="IndexMain">
+            <div class="IndexLeft">
+                <img name="{{ plant[4] }}" src="{{ plant[4] }}" alt="plant picture of {{ plant[1] }}" width="500px">
             </div>
-            <div name="{{ plant[1] }}">Name: {{ plant[1] }}</div>
-            <div name="{{ plant[2] }}">Stock: {{ plant[2] }}</div>
-            <div name="{{ plant[3] }}">Price: {{ plant[3] }},00€</div>
-            <div name="{{ plant[5] }}">Description: {{ plant[5] }}</div>
-            <input type='hidden' name='plant_id' value='{{ plant[0]}}'>
-            <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}">
-            <button name="submit" value="submit" type="submit">Add</button>
+            <div class="IndexRight">
+                <div name="{{ plant[1] }}">Name: {{ plant[1] }}</div>
+                <div name="{{ plant[2] }}">Stock: {{ plant[2] }}</div>
+                <div name="{{ plant[3] }}">Price: {{ plant[3] }},00€</div>
+                <div name="{{ plant[5] }}">Description: {{ plant[5] }}</div>
+                <input type='hidden' name='plant_id' value='{{ plant[0]}}'>
+                <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}">
+                <button name="submit" value="submit" type="submit">Add</button>
+            </div>
         </div>
     </form>
     {% endfor %}
