--- a/templates/create.html
+++ b/templates/create.html
@@ -6,9 +6,9 @@
 
 {% block navigation %}
     {% if role == "admin" %}
-        <li><a href="/administration">Manage</a></li>
-        <li><a href="/communication">Inform</a></li>
-        <li><a href="/newsletter">Compose</a></li>
+        <li class="NavBarLi"><a href="/administration">Manage</a></li>
+        <li class="NavBarLi"><a href="/communication">Inform</a></li>
+        <li class="NavBarLi"><a href="/newsletter">Compose</a></li>
     {% endif %}
 {% endblock %}
 
