--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,6 @@
 <html lang="en">
 
     <head>
-
-        <!-- Required meta tags -->
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,13 +10,12 @@
         <meta name="description" content="The Crazy Plant Crew website" />
         <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' />
 
-        <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
-        <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"> -->
-
         <link href="/static/favicon.ico" rel="icon">
         <link href="/static/styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -27,48 +24,31 @@
 
         <title>Crazy Plant Crew: {% block title %}{% endblock %}</title>
 
-        <style>
-            #map {
-                position: absolute;
-                height: 250px;
-                width: 250px;
-            }
-            .marker {
-                background-image: url('/static/marker.png');
-                background-size: cover;
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                cursor: pointer;
-            }
-        </style>
-
     </head>
 
     <body>
-        <nav>
+        <nav class="NavBarMain">
             <a href="/"><span>Crazy Plant Crew</span></a>
             <div>
                 {% if session.user_id %}
-                    <ul>
-                        <div>
-                            <li><a href="/">Plants</a></li>
-                            <li><a href="/basket">Basket</a></li>
-                            <li><a href="/article">News</a></li>
-                            <li><a href="/about">About</a></li>
-                            <li><a href="/message">Contact</a></li>
+                    <ul class="NavBarRow">
+                        <div class="NavBarLeft">
+                            <li class="NavBarLi"><a href="/">Plants</a></li>
+                            <li class="NavBarLi"><a href="/basket">Basket</a></li>
+                            <li class="NavBarLi"><a href="/article">News</a></li>
+                            <li class="NavBarLi"><a href="/about">About</a></li>
+                            <li class="NavBarLi"><a href="/message">Contact</a></li>
                         </div>
-                        <div>
+                        <div class="NavBarRight">
                             {% block navigation %}{% endblock %}
-                            <li><a href="/profile">{{ name }}</a></li>
-                            <li><a href="/logout">Log Out</a></li>
+                            <li class="NavBarLi"><a href="/profile"><img src="{{ picture }}" alt="Profile picture of {{ name }}" height="50"></li></a>
+                            <li class="NavBarLi"><a href="/logout">Log Out</a></li>
                         </div>
-                    </ul>
-                    <img src="{{ picture }}" alt="Profile picture of {{ name }}" height="100"> 
+                    </ul> 
                 {% else %}
                     <ul>
-                        <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/signin">Log In</a></li>
+                        <li class="NavBarLi"><a href="/signup">Sign Up</a></li>
+                        <li class="NavBarLi"><a href="/signin">Log In</a></li>
                     </ul>
                 {% endif %}
             </div>
@@ -90,21 +70,23 @@
             {% block main %}{% endblock %}
         </main>
 
-        <footer>
-            <div>
-                <div>
-                    Follow us
+        <footer class="FooterMain">
+            <div class="FooterRow">
+                <div class="FooterLeft">
+                    <div>
+                        Follow us
+                    </div>
+                    <div>
+                        <a href="https://www.instagram.com/crazyplantcrew">Instagram</a><br>
+                        <a href="https://youtube.com/channel/UCcpvtx2PUXIBgLY_tIPX9Sw">Youtube</a>
+                    </div>
                 </div>
-                <div>
-                    <a href="https://www.instagram.com/crazyplantcrew">Instagram</a>
-                    <a href="https://youtube.com/channel/UCcpvtx2PUXIBgLY_tIPX9Sw">Youtube</a>
-                </div>
-                <div>
-                    © The Crazy Plant Crew 2020
+                <div>               
+                    <div id='map'></div>
                 </div>
             </div>
-            <div>               
-                <div id='map'></div>
+            <div>
+                © The Crazy Plant Crew 2020
             </div>
         </footer>
     </body>
