--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,6 +4,14 @@
     Sign In
 {% endblock %}
 
+{% block navigation %}
+    {% if role == "admin" %}
+        <li class="NavBarLi"><a href="/administration">Manage</a></li>
+        <li class="NavBarLi"><a href="/communication">Inform</a></li>
+        <li class="NavBarLi"><a href="/newsletter">Compose</a></li>
+    {% endif %}
+{% endblock %}
+
 {% block main %}
     <form action="/signin" method="post">
         <div>
