Some CSS & Icons upload

--- a/static/styles.css
+++ b/static/styles.css
@@ -245,3 +245,59 @@ main {
 }
 
 
+/*  CAROUSEL */
+
+
+.carousel-control-prev-icon {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-prev {
+	margin-left: -200px;
+}
+
+.carousel-control-next {
+	margin-right: -200px;
+}
+
+
+/*  TABLES */
+
+
+.TableMain {
+	width: 1000px;
+}
+
+
+/*  SIGNUP & SIGNIN */
+
+
+.SignupMain {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: baseline;
+	align-content: center;
+
+	width: 500px;
+	height: 500px;
+}
+
+.SigninMain {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+
+	width: 250px;
+	height: 250px;
+}
+
+
