--- a/templates/communication.html
+++ b/templates/communication.html
@@ -14,7 +14,7 @@
 
 {% block main %}
     <form action="/communication" method="post">
-        <table>
+        <table class="TableMain">
             <thead>
                 <tr>
                     <th scope="col">Title</th>
