--- a/templates/administration.html
+++ b/templates/administration.html
@@ -14,7 +14,7 @@
 
 {% block main %}
     <form action="/administration" method="post">
-        <table>
+        <table class="TableMain">
             <thead>
                 <tr>
                     <th scope="col">Name</th>
