--- a/templates/basket.html
+++ b/templates/basket.html
@@ -14,7 +14,7 @@
 
 {% block main %}
     <form action="/basket" method="post">
-        <table>
+        <table class="TableMain">
             <thead>
                 <tr>
                     <th scope="col">Picture</th>
