--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,49 +13,31 @@
 {% endblock %}
 
 {% block main %}
-    <p>Register or <a href='/signin'>login</a></p><br>
     <script src="https://www.google.com/recaptcha/api.js"></script>
+
     <form action="/signup" method="post" enctype="multipart/form-data">
-        <div>
-            <p>Username (2 - 20 characters).</p>
-            <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
-        </div>
-        <br>
-
-        <div>
-            <p>Email.</p>
-            <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email" type="text">
-        </div>
-        <br>
-
-        <div>
-            <p>Password (7 to 15 characters, min 1 numeric, min 1 special).</p>
-            <input id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <div>
-            <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password">
-        </div>
-        <br>
-
-        <div>
-            <p>Profile picture (32mb max - *.jpg, *.png, *.bmp, *.gif, *.tif, *.webp, *.heic, *.pdf).</p>
-            <input type="file" id="picture" name="picture">
-        </div>
-        <br>
-        
-        <div class="g-recaptcha" id="reCaptcha" data-sitekey="{{ pub_key }}"></div>
-        <br>
-
-        <div>
-            <input type="checkbox" id="cookies" name="cookies" value="Accept cookies">
-            <label for="cookies">Accept website cookies</label><br>
-        </div>
-        <br>
-        <div>
+        <div class="SignupMain">
+            <div>
+                <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username (2 - 20 char)." type="text">
+                <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email." type="text">
+            </div>
+            <div>
+                <input id="password" name="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." type="password" size="50">
+                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="50">  
+            </div>
+            <div>         
+                <input type="file" id="picture" name="picture">
+                <div>Profile picture (32mb max - *.jpg, *.png, *.bmp).</div>
+            </div>
+            <div class="g-recaptcha" id="reCaptcha" data-sitekey="{{ pub_key }}"></div>
+            <div>
+                <input type="checkbox" id="cookies" name="cookies" value="Accept cookies">
+                <label for="cookies">Accept website cookies</label><br>
+            </div>
             <button id="submit" type="submit">Sign Up</button>
         </div>
-        <br>
     </form>
+
 
     <script>
         // Password must be between 7 to 15 characters which contain at least one numeric digit and a special character
